--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clean": "rimraf dist/",
     "prettier": "prettier --write .",
     "copy-files": "copyfiles static/* dist/assets && copyfiles index.html dist",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -35,9 +37,13 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/compression": "1.7.1",
     "@types/concurrently": "6.2.1",
     "@types/eslint": "7.28.0",
+    "@types/jest": "^27.0.2",
     "@types/node": "16.4.2",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
@@ -51,15 +57,18 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
-    "lint-staged": ">=10",
     "husky": ">=6",
+    "jest": "^27.3.1",
+    "lint-staged": ">=10",
     "postcss": "8.3.6",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "tailwindcss": "2.2.7",
+    "ts-jest": "^27.0.7",
     "typescript": "4.3.5",
     "vite": "2.4.3",
     "vite-plugin-legacy": "^2.1.0"
