--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": ">=6",
     "jest": "^27.3.1",
     "lint-staged": ">=10",
