--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/react-helmet": "^6.1.4",
     "autoprefixer": "^10.3.1",
+    "classnames": "^2.3.1",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
     "express": "4.17.1",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "serve-static": "^1.14.1",
     "ts-node": "^10.1.0"
@@ -47,7 +51,9 @@
     "@types/node": "16.4.2",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-config": "^5.0.3",
     "@types/react-router-dom": "^5.1.8",
+    "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "@vitejs/plugin-react-refresh": "^1.3.5",
@@ -72,7 +78,8 @@
     "ts-jest": "^27.0.7",
     "typescript": "4.3.5",
     "vite": "2.4.3",
-    "vite-plugin-legacy": "^2.1.0"
+    "vite-plugin-legacy": "^2.1.0",
+    "vite-plugin-svgr": "^0.4.0"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx,js,jsx}": "prettier --write"
