--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
     "moduleResolution": "Node",
     "skipLibCheck": true,
     "sourceMap": true,
-    "target": "ES2020"
+    "target": "ES2020",
+    "types": ["vite-plugin-svgr/client"],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*", "types/*", "*"]
 }
