--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "type": "git",
     "url": "https://github.com/jonluca/vite-typescript-ssr-react"
   },
-  "author": "JonLuca DeCaro",
+  "author": "Laishuxin",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --watch server.ts --watch src/server --exec \"yarn ts-node server.ts\"",
+    "dev:server": "json-server ./__json_server__/db.json --watch --port 7891",
     "build": "tsc -p tsconfig.prod.json && yarn build:client && yarn build:server && yarn copy-files",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/client/entry-server.tsx --outDir dist/server",
@@ -22,19 +23,24 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@types/react-helmet": "^6.1.4",
     "autoprefixer": "^10.3.1",
+    "axios": "^0.23.0",
     "classnames": "^2.3.1",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
     "express": "4.17.1",
+    "express-http-proxy": "^1.6.2",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.5",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
+    "redux-promise": "^0.6.0",
     "serve-static": "^1.14.1",
     "ts-node": "^10.1.0"
   },
@@ -47,12 +53,14 @@
     "@types/compression": "1.7.1",
     "@types/concurrently": "6.2.1",
     "@types/eslint": "7.28.0",
+    "@types/express-http-proxy": "^1.6.3",
     "@types/jest": "^27.0.2",
     "@types/node": "16.4.2",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-config": "^5.0.3",
     "@types/react-router-dom": "^5.1.8",
+    "@types/redux-promise": "^0.5.29",
     "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
@@ -70,6 +78,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": ">=6",
     "jest": "^27.3.1",
+    "json-server": "^0.17.0",
     "lint-staged": ">=10",
     "postcss": "8.3.6",
     "prettier": "^2.3.2",
