--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-helmet": "^6.1.4",
+    "@types/styled-components": "^5.1.15",
     "autoprefixer": "^10.3.1",
     "axios": "^0.23.0",
     "classnames": "^2.3.1",
@@ -32,7 +33,6 @@
     "cross-env": "^7.0.3",
     "express": "4.17.1",
     "express-http-proxy": "^1.6.2",
-    "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -42,6 +42,7 @@
     "react-router-dom": "^5.2.0",
     "redux-promise": "^0.6.0",
     "serve-static": "^1.14.1",
+    "styled-components": "^5.3.3",
     "ts-node": "^10.1.0"
   },
   "devDependencies": {
@@ -80,6 +81,7 @@
     "jest": "^27.3.1",
     "json-server": "^0.17.0",
     "lint-staged": ">=10",
+    "nodemon": "^2.0.12",
     "postcss": "8.3.6",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
