--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/swiper": "^4.4.12",
     "autoprefixer": "^10.3.1",
     "axios": "^0.23.0",
+    "better-scroll": "^2.0.0-beta.10",
     "classnames": "^2.3.1",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
