feat(recommend): recommend list

--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "@types/styled-components": "^5.1.15",
     "@types/swiper": "^4.4.12",
     "autoprefixer": "^10.3.1",
-    "axios": "^0.23.0",
-    "better-scroll": "^2.0.0-beta.10",
+    "axios": "^0.24.0",
+    "better-scroll": "^2.4.2",
     "classnames": "^2.3.1",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
     "express": "4.17.1",
     "express-http-proxy": "^1.6.2",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -42,6 +43,7 @@
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
+    "react-simple-img": "^3.0.0",
     "redux-promise": "^0.6.0",
     "serve-static": "^1.14.1",
     "styled-components": "^5.3.3",
