--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "jest": "^27.3.1",
     "json-server": "^0.17.0",
     "lint-staged": ">=10",
+    "nock": "^13.2.1",
     "nodemon": "^2.0.12",
     "postcss": "8.3.6",
     "prettier": "^2.3.2",
