--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.15",
     "@types/swiper": "^4.4.12",
+    "add": "^2.0.6",
     "autoprefixer": "^10.3.1",
     "axios": "^0.24.0",
     "better-scroll": "^2.4.2",
@@ -49,7 +50,9 @@
     "serve-static": "^1.14.1",
     "styled-components": "^5.3.3",
     "swiper": "4.5.1",
-    "ts-node": "^10.1.0"
+    "ts-node": "^10.1.0",
+    "use-debounce": "^7.0.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
